--- a/assets/MyAssets/frankCSS.css
+++ b/assets/MyAssets/frankCSS.css
@@ -1,190 +1,253 @@
 @font-face {
-  font-family: "MyFont";
-  src: url(../MyAssets/Fonts/Ubuntu-Light.ttf) format('truetype');
-  font-weight: normal;
-  font-style: normal;
+    font-family: "MyFont";
+    src: url(../MyAssets/Fonts/Ubuntu-Light.ttf) format('truetype');
+    font-weight: normal;
+    font-style: normal;
 }
 
 @font-face {
-  font-family: "MyFont2";
-  src: url(../MyAssets/Fonts/ARCADE_I.ttf) format('truetype');
-  font-weight: normal;
-  font-style: normal;
+    font-family: "MyFont2";
+    src: url(../MyAssets/Fonts/ARCADE_I.ttf) format('truetype');
+    font-weight: normal;
+    font-style: normal;
 }
 
 body {
-  background-image: url('../../images/header.jpg');
-  background-size: cover;
-  background-repeat: no-repeat;
-  background-attachment: fixed;
+    background-image: url('../../images/header.jpg');
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-attachment: fixed;
 }
 
-p, h1, h2, h3, h4, h5, h6, strong, a, input, label, li {
-  font-family: "MyFont", sans-serif !important;
-  color: white !important;
+p,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+strong,
+a,
+input,
+label,
+li {
+    font-family: "MyFont", sans-serif !important;
+    color: white !important;
 }
 
 ul {
-  list-style-type: none;
-  width: 100%
+    list-style-type: none;
+    width: 100%
 }
 
 .icon:hover {
-  color: #ef8376 !important;
+    color: #ef8376 !important;
 }
 
 .nav__item {
-  background-color: rgba(0, 0, 0, 0.1);
-  border-radius: 30px;
+    background-color: rgba(0, 0, 0, 0.1);
+    border-radius: 30px;
 }
 
 .nav__item:hover {
-  background-color: #ef8376;
+    background-color: #ef8376;
 }
 
 .header__title {
-  color: #fff !important;
-  font-family: "MyFont2", sans-serif !important;
-  font-size: 40px !important;
+    color: #fff !important;
+    font-family: "MyFont2", sans-serif !important;
+    font-size: 40px !important;
 }
 
 .header__scrollDiv {
-  height: 50px;
-  /*padding-top: 5px;*/
+    height: 50px;
+    /*padding-top: 5px;*/
 }
 
 .header__scrollButton {
-  background-color: rgba(250, 250, 250, 0.15);
+    background-color: rgba(250, 250, 250, 0.15);
 }
 
 .banner__iconDiv {
-  padding: 40px;
+    padding: 40px;
 }
 
 .header__title {
-  font-size: 40px;
+    font-size: 40px;
 }
 
 .icons__Container {
-  width: 45%;
+    width: 45%;
 }
 
 .carousel {
-  padding: 50px, 15px !important
+    padding: 50px, 15px !important
 }
 
 .card__title {
-  color: white !important;
-  font-weight: bold;
+    color: white !important;
+    font-weight: bold;
 }
 
 .card__title:hover {
-  color: #ef8376 !important;
+    color: #ef8376 !important;
 }
 
 .card__image:hover {
-  transform: scale(1.05);
-  overflow: hidden;
-  opacity: 0.9;
+    transform: scale(1.05);
+    overflow: hidden;
+    opacity: 0.9;
+    cursor: pointer;
 }
 
 .card__text {
-  height: 100px;
-  overflow-y: scroll;
-  font-size: 16px;
+    height: 100px;
+    overflow-y: scroll;
+    font-size: 16px;
 }
 
 .card__buttonContainer {
-  width: 100%;
-  justify-content: space-between;
-  align-items: center;
-  display: flex;
-  flex-direction: column;
-  padding-top: 10px;
-  height: 130px;
+    width: 100%;
+    justify-content: space-between;
+    align-items: center;
+    display: flex;
+    flex-direction: column;
+    padding-top: 10px;
+    height: 130px;
 }
 
 .card__button {
-  width: 220px;
-  height: 50px;
-  text-align: center;
-  margin: auto, 45px;
+    width: 220px;
+    height: 50px;
+    text-align: center;
+    margin: auto, 45px;
 }
 
 .skillsetContainer {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: center;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
 }
 
 .myList {
-  list-style-type: disc;
+    list-style-type: disc;
 }
+
 
 /* width */
+
 ::-webkit-scrollbar {
-  width: 20px;
+    width: 20px;
 }
+
 
 /* Track */
+
 ::-webkit-scrollbar-track {
-  box-shadow: inset 0 0 5px grey;
-  border-radius: 10px;
+    box-shadow: inset 0 0 5px grey;
+    border-radius: 10px;
 }
+
 
 /* Handle */
+
 ::-webkit-scrollbar-thumb {
-  background: #ef8376;
-  border-radius: 10px;
+    background: #ef8376;
+    border-radius: 10px;
 }
 
+
 /* Handle on hover */
+
 ::-webkit-scrollbar-thumb:hover {
-  background: #a25050;
+    background: #a25050;
 }
 
 .myForm {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  width: 100%;
-  margin: 0px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 100%;
+    margin: 0px;
 }
 
 .form__label {
-  color: white !important;
-  padding-top: 10px;
+    color: white !important;
+    padding-top: 10px;
 }
 
 .myAlign {
-  text-align: center;
+    text-align: center;
 }
 
 .fields {
-  align-items: center;
-  margin: auto;
-  width: 40vw;
+    align-items: center;
+    margin: auto;
+    width: 40vw;
 }
 
 .myUpMarg {
-  padding-top: 20px;
+    padding-top: 20px;
 }
 
 .form__buttonContainer {
-  padding-top: 20px;
-  width: 100%;
-  padding-left: 0px;
-  align-items: center;
-  justify-content: center;
-  display: flex;
+    padding-top: 20px;
+    width: 100%;
+    padding-left: 0px;
+    align-items: center;
+    justify-content: center;
+    display: flex;
 }
 
 .form__button {
-  align-items: center;
-  padding-left: 0px;
-  width: 100%;
-  justify-content: center;
+    align-items: center;
+    padding-left: 0px;
+    width: 100%;
+    justify-content: center;
 }
+
+#lightbox {
+    position: fixed;
+    z-index: 1000;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, .8);
+    display: none;
+}
+
+#lightbox.active {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+@media only screen and (max-width: 700px) {
+    #lightbox img {
+        width: 90vw;
+    }
+}
+
+@media only screen and (min-width: 700px) {
+    #lightbox img {
+        width: 70vw;
+    }
+}
+
+@media only screen and (min-width: 1100px) {
+    #lightbox img {
+        width: 55vw;
+    }
+}
+
+#lightbox img {
+    max-width: 90%;
+    max-height: 80%;
+    padding: 8px;
+    background-color: black;
+    border: 2px solid white;
+}
+
 
 /*COLOURS
 
@@ -208,6 +271,8 @@ background: linear-gradient(270deg, #454545, #392e5c, #343434);
     animation: Animation 20s ease infinite;
 
   */
+
+
 /* TODO:
 Add Projects Folder
 Ad github links and project links
